# Transgrade-Validation

./: README.md  answer.txt  pyproject.toml  report.md  rubrics.txt  rubrics_1.txt
src/validation/: crew.py  main.py
src/validation/config/: agents.yaml  tasks.yaml
