[project]
name = "validation"
version = "0.1.0"
description = "validation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0",
    "flask>=2.3.0,<3.0.0",
    "flask-cors>=4.0.0,<5.0.0"
]

[project.scripts]
validation = "validation.main:run"
run_crew = "validation.main:run"
train = "validation.main:train"
replay = "validation.main:replay"
test = "validation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
